@@ -1,3 +1,9 @@
+2005-02-20  Bruno Haible  <bruno@clisp.org>
+
+	* comptran.d (N_log_N): Remove start_p argument.
+	(N_N_log_N, N_N_expt_N): Update.
+	* lisparit.d (LOG): Update.
+
 2005-02-24  Sam Steingold  <sds@gnu.org>
 
 	* lispbibl.d (HAVE_DISASSEMBLER): define always
